TimescalDB. API: stats endpoints
